# clang-tidy-external-example

./: CMakeLists.txt  LICENSE  README.md
include/: clangtidy_libpressio.h
src/: clangtidy_libpressio.cc
